--- a/tradingplatform-global/pom.xml
+++ b/tradingplatform-global/pom.xml
@@ -3,15 +3,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>com.secondhand</groupId>
+		<artifactId>tradingplatform-parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+
 	<groupId>com.secondhand</groupId>
-	<artifactId>tradingplatform</artifactId>
+	<artifactId>tradingplatform-global</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
-	<modules>
-		<module>tradingplatform-admin</module>
-		<module>tradingplatform-global</module>
-		<module>tradingplatform-parent</module>
-		<module>tradingplatform-rest</module>
-	</modules>
+
 </project>
