--- a/tradingplatform-parent/pom.xml
+++ b/tradingplatform-parent/pom.xml
@@ -4,14 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.secondhand</groupId>
-	<artifactId>tradingplatform</artifactId>
+	<artifactId>tradingplatform-parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
-	<modules>
-		<module>tradingplatform-admin</module>
-		<module>tradingplatform-global</module>
-		<module>tradingplatform-parent</module>
-		<module>tradingplatform-rest</module>
-	</modules>
+
 </project>
