--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,18 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
+
 	<modules>
 		<module>tradingplatform-admin</module>
-		<module>tradingplatform-global</module>
-		<module>tradingplatform-parent</module>
-		<module>tradingplatform-rest</module>
+		<module>tradingplatform-common</module>
+		<module>tradingplatform-front</module>
+		<module>tradingplatform-generator</module>
 	</modules>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.0.5.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
 </project>
