--- a/tradingplatform-admin/pom.xml
+++ b/tradingplatform-admin/pom.xml
@@ -5,7 +5,7 @@
 
 	<parent>
 		<groupId>com.secondhand</groupId>
-		<artifactId>tradingplatform-parent</artifactId>
+		<artifactId>tradingplatform</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
@@ -16,13 +16,6 @@
 
 	<name>tradingplatform-admin</name>
 	<description>Demo project for Spring Boot</description>
-
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.5.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
