--- a/tradingplatform-generator/pom.xml
+++ b/tradingplatform-generator/pom.xml
@@ -88,7 +88,12 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.7.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.secondhand</groupId>
+            <artifactId>tradingplatform-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
