--- a/tradingplatform-generator/src/main/resources/application.yml
+++ b/tradingplatform-generator/src/main/resources/application.yml
@@ -80,13 +80,13 @@ spring:
         url-pattern: /druid/*
         #允许清除记录
         reset-enable: false
-      aop-patterns: com.mpdemo.service.*
+      aop-patterns: com.secondhand.tradingplatformgenerator.example.service.*
 
 #mybatis
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
-  typeAliasesPackage: com.mpdemo.entity
+  typeAliasesPackage: com.secondhand.tradingplatformgenerator.example.entity
   global-config:
     #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
     id-type: 2
