--- a/tradingplatform-admin/lalala/pom.xml
+++ b/tradingplatform-admin/lalala/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.secondhand</groupId>
-	<artifactId>test</artifactId>
+	<artifactId>lalala</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>test</name>
+	<name>lalala</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
