--- a/tradingplatform-admin/pom.xml
+++ b/tradingplatform-admin/pom.xml
@@ -2,6 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<modules>
+		<module>testest</module>
+	</modules>
 
 	<parent>
 		<groupId>com.secondhand</groupId>
@@ -12,7 +15,7 @@
 	<groupId>com.secondhand</groupId>
 	<artifactId>tradingplatform-admin</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
 	<name>tradingplatform-admin</name>
 	<description>Demo project for Spring Boot</description>
