--- a/tradingplatform-admin/tradingplatform-admin-entrance/pom.xml
+++ b/tradingplatform-admin/tradingplatform-admin-entrance/pom.xml
@@ -5,7 +5,7 @@
 
 	<parent>
 		<groupId>com.secondhand</groupId>
-		<artifactId>tradingplatform</artifactId>
+		<artifactId>tradingplatform-admin</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
