--- a/tradingplatform-admin/tradingplatform-admin-controller/pom.xml
+++ b/tradingplatform-admin/tradingplatform-admin-controller/pom.xml
@@ -34,6 +34,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>com.secondhand</groupId>
+            <artifactId>tradingplatform-admin-entity</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+		<dependency>
+			<groupId>com.secondhand</groupId>
+			<artifactId>tradingplatform-admin-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
