--- a/tradingplatform-admin/tradingplatform-admin-mapper/pom.xml
+++ b/tradingplatform-admin/tradingplatform-admin-mapper/pom.xml
@@ -34,7 +34,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.secondhand</groupId>
+            <artifactId>tradingplatform-admin-entity</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
