--- a/tradingplatform-admin/tradingplatform-admin-service-impl/pom.xml
+++ b/tradingplatform-admin/tradingplatform-admin-service-impl/pom.xml
@@ -35,7 +35,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.secondhand</groupId>
+            <artifactId>tradingplatform-generator</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.secondhand</groupId>
+            <artifactId>tradingplatform-admin-mapper</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
