--- a/tradingplatform-admin/tradingplatform-admin-controller/pom.xml
+++ b/tradingplatform-admin/tradingplatform-admin-controller/pom.xml
@@ -35,17 +35,30 @@
 			<scope>test</scope>
 		</dependency>
 
-        <dependency>
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
+		<dependency>
             <groupId>com.secondhand</groupId>
             <artifactId>tradingplatform-admin-entity</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
 		<dependency>
 			<groupId>com.secondhand</groupId>
 			<artifactId>tradingplatform-admin-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.secondhand</groupId>
+            <artifactId>tradingplatform-admin-mapper</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
