--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
@@ -107,3 +107,29 @@ mybatis-plus.configuration.map-underscore-to-camel-case=true
 mybatis-plus.configuration.cache-enabled=false
 
 logging.config=classpath:logback.xml
+
+##----------------------------------------------------------------------------------------------------------
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count\=countSql
+
+
+#redis
+# Redis服务器地址
+spring.redis.host= localhost
+# Redis服务器连接端口
+spring.redis.port= 6379
+# 连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle= 8
+#spring.redis.pool.max-idle= 8
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle= 0
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active= 8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait= -1
+# 连接超时时间（毫秒）
+spring.redis.timeout= 0
+spring.redis.password=123456
+spring.mvc.favicon.enabled=false
