--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
@@ -104,7 +104,7 @@ mybatis-plus.global-config.logic-not-delete-value=1
 
 
 mybatis-plus.configuration.map-underscore-to-camel-case=true
-mybatis-plus.configuration.cache-enabled=false
+mybatis-plus.configuration.cache-enabled=true
 
 logging.config=classpath:logback.xml
 
@@ -130,6 +130,6 @@ spring.redis.jedis.pool.max-active= 8
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
 spring.redis.jedis.pool.max-wait= -1
 # 连接超时时间（毫秒）
-spring.redis.timeout= 100000
+spring.redis.timeout= 1500
 spring.redis.password= 123456
 spring.mvc.favicon.enabled= false
