文件上传（无法测试） + 图片下载（显示）

--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
@@ -133,3 +133,9 @@ spring.redis.jedis.pool.max-wait= -1
 spring.redis.timeout= 1500
 spring.redis.password= 123456
 spring.mvc.favicon.enabled= false
+
+
+#===========================================自定义设置================================================
+
+#文件上传路径
+tradingplatform.file.upload.path= E:/data/file/tradingplatform/
