定时业务 + 自定义线程池小修改

--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
@@ -138,4 +138,16 @@ spring.mvc.favicon.enabled= false
 #===========================================自定义设置================================================
 
 #文件上传路径
-tradingplatform.file.upload.path= E:/data/file/tradingplatform/
+tradingplatform.file.uploadPath= E:/data/file/tradingplatform/
+
+#自定义线程池配置
+#线程池大小
+tradingplatform.executor.corePoolSize= 5
+#线程池最大线程数
+tradingplatform.executor.maxPoolSize= 10
+#最大任务等待数
+tradingplatform.executor.queueCapacity= 25
+#线程名前缀
+tradingplatform.executor.threadNamePrefix= tradingplatform-task-
+#等待所有任务完成再关闭线程池
+tradingplatform.executor.waitForTasksToCompleteOnShutdown= true
