用户 + 用户类型字段

--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
@@ -151,3 +151,6 @@ tradingplatform.executor.queueCapacity= 25
 tradingplatform.executor.threadNamePrefix= tradingplatform-task-
 #等待所有任务完成再关闭线程池
 tradingplatform.executor.waitForTasksToCompleteOnShutdown= true
+
+
+#==========================================微信小程序设置==============================================
