--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #spring
 spring.aop.proxy-target-class=true
+server.port=8006
 
 #DATABASE CONFIG
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/myshtp?useUnicode=true&characterEncoding=utf-8
