--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application.properties
@@ -1,157 +1,1 @@
-#spring
-spring.aop.proxy-target-class=true
-server.port=8006
-
-#DATABASE CONFIG
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/myshtp?useUnicode=true&characterEncoding=utf-8
-spring.datasource.druid.username=root
-spring.datasource.druid.password=123456
-spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.initial-size=1
-spring.datasource.druid.max-active=20
-spring.datasource.druid.min-idle=1
-spring.datasource.druid.max-wait=60000
-spring.datasource.druid.validation-query=select 'x'
-spring.datasource.druid.test-on-borrow=false
-spring.datasource.druid.test-on-return=false
-spring.datasource.druid.test-while-idle=true
-spring.datasource.druid.time-between-eviction-runs-millis=60000
-spring.datasource.druid.min-evictable-idle-time-millis=300000
-
-spring.datasource.druid.filters=log4j
-spring.datasource.druid.filter.stat.enabled=true
-spring.datasource.druid.filter.stat.log-slow-sql=true
-spring.datasource.druid.filter.stat.slow-sql-millis=1000
-spring.datasource.druid.filter.stat.merge-sql=true
-
-#db-type: mysql
-spring.datasource.druid.filter.slf4j.enabled=true
-spring.datasource.druid.filter.slf4j.connection-log-enabled=true
-spring.datasource.druid.filter.slf4j.connection-close-after-log-enabled=true
-spring.datasource.druid.filter.slf4j.connection-commit-after-log-enabled=true
-spring.datasource.druid.filter.slf4j.connection-connect-after-log-enabled=true
-spring.datasource.druid.filter.slf4j.connection-connect-before-log-enabled=true
-spring.datasource.druid.filter.slf4j.connection-log-error-enabled=true
-spring.datasource.druid.filter.slf4j.data-source-log-enabled=true
-spring.datasource.druid.filter.slf4j.result-set-log-enabled=true
-spring.datasource.druid.filter.slf4j.statement-log-enabled=true
-
-spring.datasource.druid.filter.wall.enabled=true
-spring.datasource.druid.filter.wall.config.alter-table-allow=false
-spring.datasource.druid.filter.wall.config.truncate-allow=false
-spring.datasource.druid.filter.wall.config.drop-table-allow=false
-#是否允许非以上基本语句的其他语句，缺省关闭，通过这个选项就能够屏蔽DDL
-spring.datasource.druid.filter.wall.config.none-base-statement-allow=false
-#检查UPDATE语句是否无where条件，这是有风险的，但不是SQL注入类型的风险
-spring.datasource.druid.filter.wall.config.update-where-none-check=true
-#SELECT ... INTO OUTFILE 是否允许，这个是mysql注入攻击的常见手段，缺省是禁止的
-spring.datasource.druid.filter.wall.config.select-into-outfile-allow=false
-#是否允许调用Connection.getMetadata方法，这个方法调用会暴露数据库的表信息
-spring.datasource.druid.filter.wall.config.metadata-allow=true
-#对被认为是攻击的SQL进行LOG.error输出
-spring.datasource.druid.filter.wall.log-violation=true
-#对被认为是攻击的SQL抛出SQLExcepton
-spring.datasource.druid.filter.wall.throw-exception=true
-
-#db-type: mysql
-spring.datasource.druid.web-stat-filter.enabled=true
-spring.datasource.druid.web-stat-filter.url-pattern=/*
-spring.datasource.druid.web-stat-filter.exclusions='*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*,*.html'
-#你可以配置principalSessionName，使得druid能够知道当前的cookie的用户是谁
-#principal-cookie-name: admin
-#你可以配置principalSessionName，使得druid能够知道当前的session的用户是谁
-#principal-session-name: admin
-#设置profileEnable能够监控单个url调用的sql列表。
-spring.datasource.druid.web-stat-filter.profile-enable=true
-#session统计功能
-spring.datasource.druid.web-stat-filter.session-stat-enable=false
-#最大session数
-spring.datasource.druid.web-stat-filter.session-stat-max-count=100000
-
-spring.datasource.druid.stat-view-servlet.allow=127.0.0.1
-spring.datasource.druid.stat-view-servlet.enabled=true
-spring.datasource.druid.stat-view-servlet.login-username=admin
-spring.datasource.druid.stat-view-servlet.login-password=admin
-spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
-#允许清除记录
-spring.datasource.druid.stat-view-servlet.reset-enable=false
-
-spring.datasource.druid.aop-patterns=com.secondhand.tradingplatformadminservice.service.*
-
-#mybatis
-mybatis-plus.mapper-locations=classpath*:mapper/**/*Mapper.xml
-#实体扫描，多个package用逗号或者分号分隔
-mybatis-plus.type-aliases-package=com.secondhand.tradingplatformadminentity.entity
-
-#主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
-mybatis-plus.global-config.id-type=2
-#字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
-mybatis-plus.global-config.field-strategy=2
-#驼峰下划线转换
-mybatis-plus.global-config.db-column-underline=true
-#刷新mapper 调试神器
-mybatis-plus.global-config.refresh-mapper=true
-#数据库大写下划线转换
-#capital-mode: true
-#序列接口实现类配置
-#key-generator: com.baomidou.springboot.xxx
-#逻辑删除配置（下面3个配置）
-mybatis-plus.global-config.logic-delete-value=0
-mybatis-plus.global-config.logic-not-delete-value=1
-#自定义SQL注入器
-#sql-injector: com.baomidou.mybatisplus.mapper.LogicSqlInjector
-#自定义填充策略接口实现
-#meta-object-handler: com.baomidou.springboot.xxx
-
-
-mybatis-plus.configuration.map-underscore-to-camel-case=true
-mybatis-plus.configuration.cache-enabled=true
-
-logging.config=classpath:logback.xml
-
-##----------------------------------------------------------------------------------------------------------
-pagehelper.helperDialect=mysql
-pagehelper.reasonable=true
-pagehelper.supportMethodsArguments=true
-pagehelper.params=count\=countSql
-
-
-#redis
-# Redis服务器地址
-spring.redis.host= localhost
-# Redis服务器连接端口
-spring.redis.port= 6379
-# 连接池中的最大空闲连接
-spring.redis.jedis.pool.max-idle= 8
-#spring.redis.pool.max-idle= 8
-# 连接池中的最小空闲连接
-spring.redis.jedis.pool.min-idle= 0
-# 连接池最大连接数（使用负值表示没有限制）
-spring.redis.jedis.pool.max-active= 8
-# 连接池最大阻塞等待时间（使用负值表示没有限制）
-spring.redis.jedis.pool.max-wait= -1
-# 连接超时时间（毫秒）
-spring.redis.timeout= 1500
-spring.redis.password= 123456
-spring.mvc.favicon.enabled= false
-
-
-#===========================================自定义设置================================================
-
-#文件上传路径
-tradingplatform.file.uploadPath= E:/data/file/tradingplatform/
-
-#自定义线程池配置
-#线程池大小
-tradingplatform.executor.corePoolSize= 5
-#线程池最大线程数
-tradingplatform.executor.maxPoolSize= 10
-#最大任务等待数
-tradingplatform.executor.queueCapacity= 25
-#线程名前缀
-tradingplatform.executor.threadNamePrefix= tradingplatform-task-
-#等待所有任务完成再关闭线程池
-tradingplatform.executor.waitForTasksToCompleteOnShutdown= true
-
-
-#==========================================微信小程序设置==============================================
+spring.profiles.active=@environmental-configuration-name@
