先用maven跑着先吧，，

--- a/tradingplatform-common/pom.xml
+++ b/tradingplatform-common/pom.xml
@@ -110,8 +110,47 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<classifier>exec</classifier>
+				</configuration>
+			</plugin>
 		</plugins>
+
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<environmental-configuration-name>dev</environmental-configuration-name>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>personal</id>
+			<properties>
+				<environmental-configuration-name>personal</environmental-configuration-name>
+			</properties>
+		</profile>
+	</profiles>
 
 </project>
