--- a/tradingplatform-gecco/tradingplatform-gecco-service/pom.xml
+++ b/tradingplatform-gecco/tradingplatform-gecco-service/pom.xml
@@ -5,16 +5,17 @@
 
     <parent>
         <groupId>com.secondhand</groupId>
-        <artifactId>tradingplatform</artifactId>
+        <artifactId>tradingplatform-gecco</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+
     <groupId>com.secondhand</groupId>
-    <artifactId>tradingplatform-front</artifactId>
+    <artifactId>tradingplatform-gecco-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>tradingplatform-front</name>
+    <name>tradingplatform-gecco-service</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -26,23 +27,21 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.secondhand</groupId>
+            <artifactId>tradingplatform-gecco-entity</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
