短信加支付的代码优化

--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application-dev.properties
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application-dev.properties
@@ -134,3 +134,21 @@ tradingplatform.executor.threadNamePrefix=tradingplatform-task-
 #等待所有任务完成再关闭线程池
 tradingplatform.executor.waitForTasksToCompleteOnShutdown=true
 #==========================================微信小程序设置==============================================
+#==========================================阿里云短信服务==============================================
+#设置超时时间
+tradingplatform.message.defaultConnectTimeout=10000
+tradingplatform.message.defaultReadTimeout=10000
+#AK
+tradingplatform.message.accessKeyId=LTAI5pn6llQKiU7g
+tradingplatform.message.accessKeySecret=MTJPQBZ3pdS4X3ZHRcu4xTsIpAQQoV
+#============================================码支付设置================================================
+#token令牌
+tradingplatform.payment.token=NjAyshrrB0LcKeNTttJPBilVekuIDudP
+#码支付ID
+tradingplatform.payment.codePayId=221429
+#你的域名
+tradingplatform.payment.notifyUrl=
+#支付后同步跳转地址
+tradingplatform.payment.returnUrl=
+#通信密钥
+tradingplatform.payment.key=Wjg1vmHIVkARHLgwayuSjqJ0kLclh2L5
