收藏和支付

--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application-dev.properties
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application-dev.properties
@@ -121,7 +121,7 @@ spring.redis.password=123456
 spring.mvc.favicon.enabled=false
 #===========================================自定义设置================================================
 #文件上传路径
-tradingplatform.file.uploadPath=E:/data/file/tradingplatform/
+tradingplatform.file.uploadPath=/data/file/tradingplatform/
 #自定义线程池配置
 #线程池大小
 tradingplatform.executor.corePoolSize=5
