改了一下pom，让它全局mvn打包的时候不会报错

--- a/tradingplatform-generator/pom.xml
+++ b/tradingplatform-generator/pom.xml
@@ -102,6 +102,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.secondhand.tradingplatformgenerator.generator.MysqlGenerator</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
