--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application-dev.properties
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 spring.aop.proxy-target-class=true
 server.port=8006
 #DATABASE CONFIG
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/myshtp?useUnicode=true&characterEncoding=utf-8
+spring.datasource.druid.url=jdbc:mysql://120.79.51.168:3306/myshtp?useUnicode=true&characterEncoding=utf-8
 spring.datasource.druid.username=root
 spring.datasource.druid.password=34126fc28403
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
@@ -103,7 +103,7 @@ pagehelper.supportMethodsArguments=true
 pagehelper.params=count\=countSql
 #redis
 # Redis服务器地址
-spring.redis.host=localhost
+spring.redis.host=120.79.51.168
 # Redis服务器连接端口
 spring.redis.port=6379
 # 连接池中的最大空闲连接
@@ -117,11 +117,11 @@ spring.redis.jedis.pool.max-active=8
 spring.redis.jedis.pool.max-wait=-1
 # 连接超时时间（毫秒）
 spring.redis.timeout=1500
-spring.redis.password=123456
+spring.redis.password=
 spring.mvc.favicon.enabled=false
 #===========================================自定义设置================================================
 #文件上传路径
-tradingplatform.file.uploadPath=/data/file/tradingplatform/
+tradingplatform.file.uploadPath=/data/docker/file/tradingplatform/
 #自定义线程池配置
 #线程池大小
 tradingplatform.executor.corePoolSize=5
