--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application-dev.properties
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/application-dev.properties
@@ -117,7 +117,7 @@ spring.redis.jedis.pool.max-active=8
 spring.redis.jedis.pool.max-wait=-1
 # 连接超时时间（毫秒）
 spring.redis.timeout=1500
-spring.redis.password=
+spring.redis.password=123456
 spring.mvc.favicon.enabled=false
 #===========================================自定义设置================================================
 #文件上传路径
